# LLM_Evaluation

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: config.py  dependencies.py  main.py
backend/api/: dashboard_router.py  eval_router.py  ingest_router.py  query_router.py  review_router.py
backend/db/: database.py  models.py
backend/evaluation/: models.py  ragas_evaluator.py
backend/healing/: review_queue.py  strategy.py
backend/ingestion/: chunking.py  ingest_service.py  pdf_loader.py  web_scraper.py
backend/observability/: langfuse_client.py
backend/rag/: chain.py  query_service.py  retriever.py
backend/tests/: conftest.py  test_chunking.py  test_healing_strategy.py  test_review_queue.py
backend/vectorstore/: chroma_store.py  embedding.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  Layout.tsx  QueryInterface.tsx  ReviewQueue.tsx
frontend/src/types/: index.ts
scripts/: run_eval_batch.py  seed_data.py
