[tool.poetry]
name = "llm-eval"
version = "0.1.0"
description = "Production LLM evaluation & self-healing pipeline"
authors = ["LLM Eval Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = ">=0.115"
uvicorn = {extras = ["standard"], version = ">=0.30"}
pydantic-settings = ">=2.0"
python-multipart = ">=0.0.9"

# LLM & RAG
openai = ">=1.60"
langchain = ">=0.3"
langchain-openai = ">=0.3"
langchain-chroma = ">=0.2"
langchain-community = ">=0.3"

# Vector store & search
chromadb = ">=0.6"
rank-bm25 = ">=0.2"

# Evaluation
ragas = ">=0.2"

# Observability
langfuse = ">=2.0"

# Ingestion
pymupdf = ">=1.24"
beautifulsoup4 = ">=4.12"
requests = ">=2.31"

# Database
sqlalchemy = {extras = ["asyncio"], version = ">=2.0"}
aiosqlite = ">=0.20"
alembic = ">=1.13"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
respx = ">=0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
